# tricera

./: .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  build.sbt  patch-builds.sh  tri  tri-client  tri-native  triEnv
.github/workflows/: scala.yml
acsl-parser/: Makefile  acsl.cf
cc-parser/: Makefile  add_source_info.py  concurrentC.cf  download_jars.mk  update_reflection_config.py
exjobb_presentation/: 1_simple.c  2_simple.c  3_float.c  4_double.c  5_longdouble.c  6_loop.c  7_loop_unsafe.c
preprocessor/: CMakeLists.txt  TriceraPreprocessorMain.cpp  readme.md
preprocessor/include/: ForLoopStmtExtractor.hpp  TriCeraPreprocessorMain.hpp  TriceraPreprocessor.hpp  TypeCanoniser.hpp  TypedefRemover.hpp  UnusedDeclCommenter.hpp  UsedFunctionAndTypeCollector.hpp  Utilities.hpp
preprocessor/lib/: ForLoopStmtExtractor.cpp  TriceraPreprocessor.cpp  TypeCanoniser.cpp  TypedefRemover.cpp  UnusedDeclCommenter.cpp  UsedFunctionAndTypeCollector.cpp  Utilites.cpp
preprocessor/llvm/: CMakeLists.txt
preprocessor/llvm/cmake/modules/: LibClangBuild.cmake  LinuxMacosBuild.cmake
regression-tests/: runalldirs  rundir
regression-tests/ParametricEncoder/: Answers  runtests
regression-tests/acsl-contracts/: Answers  contract1.hcc  contract10.hcc  contract11.hcc  contract12.hcc  contract13.hcc  contract14.hcc  contract15.hcc  contract16.hcc  contract17.hcc  contract18.hcc  contract19.hcc  contract2.hcc  contract20.hcc  contract21.hcc  contract22.hcc  contract23.hcc  contract24.hcc  contract25.hcc  contract26.hcc  contract27.hcc  contract3.hcc  contract4.hcc  contract5.hcc  contract6.hcc  contract7.hcc  contract8.hcc  contract9.hcc  global-assigns-frame-safe.hcc  global-assigns-frame-unsafe.hcc  global-local-shadow-unsafe.hcc  global-old-safe.hcc  global-old-unsafe.hcc  global-param-safe.hcc  global-post-safe.hcc  global-post-unsafe.hcc  global-result-unsafe.hcc  global-void-return-safe.hcc  runtests  struct-field-access-1-true.hcc  (+3 more)
regression-tests/acsl-ghost/: Answers  ghost_acsl_assert_safe.c  ghost_acsl_assert_unsafe.c  ghost_block_form_safe.c  ghost_boolean_type_safe.c  ghost_c_assert_safe.c  ghost_c_assert_unsafe.c  ghost_c_assume_safe.c  ghost_c_other_expr_rejected.c  ghost_complex_lval_rejected.c  ghost_control_flow_if_safe.c  ghost_control_flow_if_unsafe.c  ghost_global_safe.c  ghost_identifier_integer_outside_safe.c  ghost_integer_type_safe.c  ghost_interleaved_safe.c  ghost_local_decl_safe.c  ghost_multi_decl_safe.c  ghost_multi_line_integer_safe.c  ghost_multi_stmt_safe.c  ghost_multi_stmt_unsafe.c  ghost_name_clash_global.c  ghost_name_clash_local.c  ghost_not_visible_in_c.c  ghost_pointer_assign_safe.c  ghost_pointer_assign_unsafe.c  ghost_pointer_decl_rejected.c  ghost_separate_lines_safe.c  ghost_shadowing_unaffected_safe.c  ghost_struct_field_safe.c  ghost_struct_field_unsafe.c  ghost_while_loop_safe.c  ghost_with_init_safe.c  ghost_writes_non_ghost_field_rejected.c  ghost_writes_non_ghost_rejected.c  ghost_wrong_contract_unsafe.c  runtests
regression-tests/acsl-heap/: get-1.c  get-2.c  incdec-1.c  incdec-2.c  incdec-3.c  max-1.c  max-2.c  multadd-1.c  multadd-2.c  multadd-3.c  runtests  stackpointer.c  truck-1.c  truck-2.c
regression-tests/acsl-standalone/: Answers  assigns_safe.c  assigns_unsafe.c  dblptr-assigns_safe.c  dblptr-assigns_unsafe.c  getptr_safe.c  getptr_safe.yml  getptr_unsafe.c  getptr_unsafe.yml  inc_safe.c  inc_unsafe.c  incdec_safe.c  incdec_unsafe.c  maxptr_safe.c  maxptr_unsafe.c  mc91_safe.c  mc91_unsafe.c  old_safe.c  old_unsafe.c  runtests  swap_safe.c  swap_unsafe.c
regression-tests/acsl-stmt-contracts/: Answers  assigns_nothing_safe.c  assigns_nothing_unsafe.c  assigns_unsafe.c  block_safe.c  break_out_rejected.c  continue_inside_safe.c  early_return_safe.c  early_return_unsafe.c  empty_body_safe.c  function_contract_outer_safe.c  function_contract_outer_unsafe.c  ghost_inside_safe.c  goto_inside_safe.c  goto_out_rejected.c  heap_abrupt_return_safe.c  if_body_unsafe.c  impl_caller_distinguishes_safe.c  impl_missing_assigns_unsafe.c  inferred_array_unsafe.c  inferred_heap_safe.c  inferred_multi_var_safe.c  inferred_safe.c  inferred_struct_safe.c  inferred_unsafe.c  lookup_or_default_safe.c  loose_ambiguous_unsafe.c  missing_returns_rejected.c  mixed_kinds_safe.c  modular_safe.c  modular_struct_safe.c  modular_struct_unsafe.c  multi_return_paths_safe.c  multi_return_paths_unsafe.c  nested_call_safe.c  nested_returns_rejected.c  no_return_with_returns_clause_unsafe.c  old_struct_safe.c  outer_assigns_consistent_safe.c  outer_assigns_violated_unsafe.c  (+54 more)
regression-tests/at-expressions/: Answers  at-old-01-false.c  at-old-01-true.c  runtests  simple-01-false.c  simple-01-true.c
regression-tests/double/: Answers  add_1.c  add_2.c  add_3.c  div_1.c  div_2.c  div_3.c  double_add.c  init_1.c  init_2.c  init_3.c  int_plus_float.c  leq_1.c  loop_1.c  loop_2.c  mul_1.c  mul_2.c  nan.c  nan_create.c  nan_range.c  nondet_1.c  nondet_2.c  runtests  sub_1.c  sub_2.c
regression-tests/ext-quans/: acsl-manual-example-max.hcc  battery_diag.c  coincidence-count.hcc  loop-sum-true.c  runtests  rustan-sum-example.hcc  strategy-example-1-false.hcc  strategy-example-2-true.hcc  svcomp_elimination_max.hcc  svcomp_elimination_max_simplified.hcc  two_ranges_simple_sum_select.hcc
regression-tests/extended-quantifiers/: max_eq-UB.c  min_eq-UB.c  runtests  simple-max-false.c  simple-max-true.c  simple-sum-false.c  simple-sum-true.c  (+1 more)
tmp/: example.c  slask  slask.c  slask2  slask2.c
(+663 files in other folders)
